elyreacts/src/components/styles/Header.module.scss
@import "../../variables.scss"; // Variables

$breakpoint_tablet: $media_width_tablet;
$breakpoint_desktop: $max-width_content;
$max_header_width: $media_width_retina;

$header_height: 3.5rem;

$transition_link: $transition_time_link;
$transition_anim: $transition_time_anim;

header.wrapper {
    position: sticky;
    z-index: 99998;
    top: 0;

    height: $header_height;
    width: 100%;

    background: $color_background_alt;

    box-shadow: 0 -4px 12px rgba(0, 0, 0, 0.15);

    & * {
        box-sizing: content-box;
    }
}
header.wrapper .container {
    position: absolute;
    box-sizing: border-box;
    top: 0;
    left: 0;

    display: flex;
    flex-direction: row;
    align-items: center;
    justify-content: space-between;

    width: 100%;
    max-width: $max_header_width;

    padding: 0 1.5rem;

    margin: 0 auto;
    border-bottom: 1px solid $color_background;

    & > .logo {
        & > img {
            height: 3rem;
            width: 2rem;
            padding: 0.25rem;

            pointer-events: none;
        }
    }
}

// Hamburger styles
input.hamburgerButton {
    display: none; // Hide checkbox

    & ~ label {
        position: relative;
        padding: 0.25rem;

        width: 1.5rem;
        height: 1.25rem;

        & > div,
        & > div::before,
        & > div::after {
            content: "";
            position: absolute;
            top: 0.825rem;

            height: 0.125rem;
            width: 1.5rem;

            opacity: 1;

            background: $color_text;

            transition: $transition_link;
        }
        & > div::before {
            top: -0.5rem;
        }
        & > div::after {
            top: 0.5rem;
        }
    }
}

// Menu OPEN styles
header.wrapper .container .hamburgerButton:checked {
    & ~ label {
        & > div {
            width: 0;
            background: transparentize($color_text, 1);
        }
        & > div::before {
            transform: rotateZ(45deg);
            top: -0rem;
        }
        & > div::after {
            transform: rotateZ(-45deg);
            top: -0rem;
        }
    }

    & ~ .menu {
        left: 0;
    }
}

// Default menu styles
// Menu CLOSED styles
header.wrapper .container .menu {
    position: absolute;
    z-index: -1;
    top: $header_height;
    left: calc(-100vw - 3rem); // VP + padding

    display: grid;
    grid-template-columns: 1fr;
    grid-template-rows: repeat(2, max-content);

    width: 100%;

    background: $color_background_alt;

    transition: $transition_anim;

    &::after {
        content: "";
        position: absolute;
        z-index: -1;

        height: 100vh;
        width: 100vw;

        background: $color_background_alt;

        transition: $transition_anim;
    }

    nav {
        grid-area: auto; // Unset from other layouts
    }

    nav ul {
        display: flex;
        flex-direction: column;

        & > li {
            height: auto;
            margin: auto 0;
        }
        & > li > a {
            box-sizing: border-box;
            width: 100%;
            padding: 1rem 1.5rem;

            text-align: left;
            color: $color_text;

            transition: $transition_link;

            &:hover {
                background: $color_background;
            }
        }
    }

    div.buttons {
        grid-area: auto; // Unset from other layouts
        display: grid;
        grid-template-columns: 1fr;
        grid-template-rows: repeat(2, max-content);
        grid-gap: 0.5rem;

        padding: 1rem 1.5rem;
        border-top: 1px solid $color_background;

        background: $color_background_alt;

        & > * {
            // margin-right: 1rem;
            text-align: center;
        }
        & > *:last-child {
            margin-right: 0;
        }

        & > .account {
            display: flex;
            align-items: center;
            justify-content: space-around;

            & > * {
                padding: 0.5rem;
            }
        }
    }
}

/* Media queries */
@media only screen and (min-width: $breakpoint_tablet) {
    header.wrapper {
        height: 6.5rem;
        border-bottom: 1px solid $color_background;
    }

    header.wrapper .container {
        left: 50%;
        transform: translate(-50%, 0);
        justify-content: flex-start;

        border: none;
    }

    input.hamburgerButton ~ label {
        display: none;
    }

    header.wrapper .container .menu {
        box-sizing: border-box;

        z-index: unset;
        top: 0;
        left: 0;

        padding: 0 1.5rem;

        display: grid;
        grid-template-columns: auto max-content;
        grid-template-rows: $header_height 3rem;

        background: none;

        &::after {
            display: none;
        }

        div.buttons {
            grid-area: 1/2/2/3;

            box-sizing: border-box;
            display: flex;
            flex-direction: row;

            align-items: center;
            justify-content: center;

            padding: 0;
            margin: 0;
            border: none;
        }

        nav {
            grid-area: 2/1/3/3;
        }

        nav ul {
            flex-direction: row;
            justify-content: center;

            & > li {
                flex: 1;
            }
            & > li > a {
                display: inline-block;
                width: 100%;

                text-align: center;
            }
        }
    }
}

@media only screen and (min-width: $breakpoint_desktop) {
    header.wrapper {
        height: $header_height;
    }

    header.wrapper .container .menu {
        box-sizing: border-box;
        grid-template-columns: 4rem auto max-content;
        grid-template-rows: 1fr;

        height: $header_height;

        padding: 0 1.5rem;

        nav {
            grid-area: 1/2/2/3;
        }

        div.buttons {
            grid-area: 1/3/2/4;
            padding-left: 1.5rem;

            & > .account {
                justify-content: center;
            }
        }

        nav ul {
            align-items: flex-start;
            justify-content: flex-end;

            height: 100%;
            width: 100%;

            & > li {
                flex: 0;
            }

            & > li > a {
                width: max-content;
                padding: 1.25rem 1.5rem;
            }
        }
    }
}

